Update English translation

--- a/04-11-24 | 2-shawwal-1445/English translation chatGPT 3.5
+++ b/04-11-24 | 2-shawwal-1445/English translation chatGPT 3.5
@@ -35,3 +35,35 @@ In the story of Ibrahim, peace be upon him, Allah says: 'And I have directed my 
  as long as you have a problem with yourself, a problem with the selfishness of your existence. At least swim, dive in, enter; perhaps you'll lose these directions. Clear?"
 
 
+
+
+&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+
+
+**Question**:
+
+It's known that Surah Al-Baqarah is the longest chapter in the Quran. Is there a secret why our Lord named it Al-Baqarah (The Cow) and gave it this name? For example, if we see India revering the cow, and America, the world's strongest country, calling themselves cowboys.
+
+The Pharaonic civilization also revered and glorified the cow. Is there a connection between them?
+
+**Answer**:
+
+You're now asking a question, but instead of keeping the question specific, when you started talking in this manner, it's like the question starts fading away. So, if you're asking about Surah Al-Baqarah as a Quranic chapter, we talk about Surah Al-Baqarah as a chapter and as Quran. But if we go beyond and talk about what happens in India or America, then Surah Al-Baqarah is no longer relevant at that moment. Clear? We start talking about a culture, an event, a religion, a thought, or a perception happening in a specific country. What do you want? Is it Surah Al-Baqarah or what's happening in India?
+
+Disciple: But my question is whether there's a connection?
+
+Sidi Sheikh: No, there's no connection. The connection of Surah Al-Baqarah lies within Surah Al-Baqarah itself; we don't need India or America. If we want to see America or India, we talk about the culture of a specific people. Clear on what I mean?
+
+Disciple: Yes, clear, Sidi Sheikh.
+
+Sidi Sheikh: So, what does Surah Al-Baqarah tell us? The story of Moses, peace be upon him, with the Children of Israel. Clear? Before the appearance of Moses, peace be upon him, and before the Torah and the Book of Allah, which is the Torah and the Tablets, among other things, they had multiple perceptions, not a single perception. This diverse perception they had was related to the magic that existed in their time. Because no prophet or messenger was sent unless his people were challenged in what they believed to be an intermediary between them and the Almighty or what they believed to be the deity. So God Almighty incapacitates His servants by his messengers until the truth shines forth So, what was the prevailing perception of Moses' people? The dominance of magic was prevalent in their perception, so the people all dealt with magic. Hence, Moses' people, meaning a specific and limited group, were bound by the practices of these magicians Understand? So, it gave a lesson to Pharaoh and his people. Pharaoh himself had no reliance except on the magicians in his life's course. This is it.
+
+ we approach with guidance to the Creator, glorified and exalted, from sheep and camels, meaning from livestock in general, they are also have this sacrifice idea and perception. Clear? And this negative mental state in perceiving the matter, as you mentioned, cow or calf , the current and prevailing religion of Moses' people, as manifested in the Samaritan, was embodied in the cow worshipers. Meaning they took the cow as their god. When we say they worship the cow, it's not that everyone worships the cow; among them, there are those who worship fire, among them, there are those who worship multiple perceptions.
+
+ However, there was a group of people who were close to Moses, peace be upon him, meaning it was like the immediate circle around Moses, peace be upon him. This was their veil from knowing God and from Moses. It was their worship that prevailed among them in their ancient tradition , as they took cows as gods. Understand? Just like the Samaritan, this was what was in his heart. So, when our Prophet Moses, peace be upon him, left them and sought seclusion with his Lord, what did the Samaritan do to them? He made for them a calf and said to them, "This is your god and the god of Moses." What does "your god and the god of Moses" mean? Why did Moses include them? Meaning the closest circle to Moses, most of them, before they entered into Islam, used to worship cows. So, it wasn't strange or illogical for them because they were accustomed to it before, understand? They were accustomed before they took this idol in the form of a calf or a cow as their god. So, what did this calf do? Because the issue is that as long as the calf remained motionless, they were accustomed to it and worshiped it for many years, understand? But now, Moses, peace be upon him, had denied them this worship and denied them this divinity in their minds, and clarified to them that the worship of the One God, who is unique, is not like anything else, which is Oneness. But despite that, the effect of what their lower self had become accustomed to and imprinted on them for many years remained. So, what did he do? As if by the footprint of this horse "Gabriel peace be upon him horse" and by the blessing of the permission of Aaron, peace be upon him, this calf made of gold moved, so it moved and bellowed, understand? So, it made a sound, and as long as it made a sound, it was as if it was saying to them, "No, this is a real god because it is alive." Clear or not? Not like what you were accustomed to, not making a sound and so on, clear until now? It means it brought to their minds what had been ingrained in their lower self for many ages. This is the issue.
+
+ When the story of one of Moses people , who was killed occurred , and his matter was concealed, so another person was falsely accused instead of the real killer, And this event occurred between two tribes, or between two known nations, Here Moses, peace be upon him, came with what they were influenced by, understand? Because everything was slaughtered and sacrificed except for the Calf and the cow, as long as the Samaritan acted against them, of course, in his favor. Of course, it became in their minds like a good omen, meaning leave it, "it is ordered", it is like this. So, Moses, peace be upon him, ordered them to slaughter this cow from within themselves, from their hearts, so that the bond of Oneness would be revived in their hearts, and they would return to the Oneness of Allah , glorified and exalted. So, the story came to this consensus, meaning to slaughter and to negate what the soul and lower self had become accustomed to for many ages, understand? So, this is your veil in knowing your Lord, to contradict yourself on what you have become accustomed to and what you considered great, to remove it from your soul, so he brought this cow, and of course, their study, culture, and religion were all about cow worship, many questions arose about it, how is it? What is its type? What is its color? What are its characteristics? Understand? So, our Master Moses, peace be upon him, began to answer and specify the cow for them, of course, with the permission of the Allah , glorified and exalted, so that they could have this image of this cow, which was great in their minds, not just an ordinary cow, understand? Because even this specialization, the specialization they took, doesn't mean it's an ordinary matter. You don't just bring any cow and worship it; this cow had to be a virgin, of course, it didn't do any work whatsoever, it was sacred from its youth, its color was unique so it carried that feature. Even when the Samaritan made this Calf for them, he made it with the same feature that Moses, peace be upon him, specified for the cow, clear ? Did you understand me or not ? 
+
+ Because at that time, the yellow cow was not present in abundance and was not found, so he said it was one unique cow, unlike any other, bright yellow in color, meaning this specialization they knew, so they asked about it. They didn't ask about a specialization they didn't know about, clear? It's as if they were saying, "If we were to bring any cow, regardless of whether we learned Oneness or not, let's bring something great in our hearts and souls, imagining that it is God." Astaghfirullah, that's the greatest veil. So, you have to bring it, so they actually brought it and slaughtered it before them as if giving them the image that it was not created for worship but for slaughter, and the well-known verse in this chapter means it was created for slaughter. And if you slaughtered it, as long as it is Allah commanded you to slaughter it, so they slaughtered it as an offering to Allah. This is real closeness and this is the law "sharia". But if you, for example, raised it and sanctified it in your heart, and did not touch it and let it do whatever it wanted, this contradicts the law of the Lord "sharia". This does not teach you Oneness, but rather this is association and disbelief in Allah. So, he taught them Oneness with this characteristic, on a matter they had become accustomed to, and it had a nature and dignity in their hearts and soul, clear? So, they brought that unique cow, unlike any other, and slaughtered it, and it was just struck with its side, for example, or its shoulder, and it struck the dead, so Allah, glorified and exalted, blow into it from His spirit, so he spoke and revealed the killer, and returned dead instantly, meaning if he had remained alive, he would have been worshiped besides Allah. So they said, "Perhaps what was hidden in this cow has transferred to him," so humans will continueto be worshiped in other ages instead of cows, clear? So this cow or calf had a status among the people of Moses because it was worshiped besides the Lord, clear? So our Lord gave us an example so that even if we deviated from our thoughts and ways, we remember that the cow was created only as cattle to reflect on , slaughter, closeness to Allah, eating, and other purposes, clear? Not for glorifying
+
+. As for the issue of the people of India or America or any other country or people who worship cows, of course, that lineage remains existent to this day, as there are not only people worshiping cows in this era; there are people worshiping fire, stars, and even rats. Don't say they don't exist; they do. There are people who worship rats. This is not something new or a new form of polytheism or disbelief; this existed in the past but remained like a stream, a lineage. Do you understand? Its influence persists to this day, clear? That's what it is. As for saying there is no connection of the Surah to China or India , it's for the people of Moses. Surah Al-Baqarah is considered like the Torah, clear? The story of Surah Al-Baqarah is the same as if someone wants to read the Torah, let them read Surah Al-Baqarah, clear. There are those who, for example, are researching religions, so they search and want to study the Book of the Creator, which is the Torah, right? There's nothing wrong with that; let them not tire themselves; they return to the Quran and read Surah Al-Baqarah because there they read the Torah unaltered, clear. Like this, for example, if someone wants to read the Gospel, and there are many versions of the Gospel, instead of tiring themselves, they read Surah Maryam, clear? For example, they feel as if they've read an unaltered Gospel because the Quran is the compiler of all heavenly books. If we now searched and found an unaltered Gospel, an unaltered Torah, unaltered scrolls, and unaltered tablets, as if we took a divided Quran, instead of calling it Part 15, for example, or Part 20, we call this part the Torah, and this part the Gospel, and this part the Scrolls, clear? And they were compiled for the Chosen One whichis ProphetMuhammad, peace be upon him, because the Prophet said, "I have been given the comprehensive words," meaning the words of Allah are comprehensive, it's the Quran. So Allah compiled all the books and made them available without distortion and alteration. People abandoned the Quran and started searching in cultures and in all the heavenly books, all of which are fake, all made by humans. Some words remained true to their original meaning; you find them similar to the Quran. As for most words or verses, they were indeed altered, so Surah Al-Baqarah remains the slaughter of your greed, disbelief, and polytheism that you associated with your Lord. And if you slaughtered it and scarificed it for allah ? Allah revives your heart and your heart will acknowledges the truth, unifying the Lord of Majesty.
